fixed layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -155,6 +155,9 @@ body {
 
 .search-label {
   position: relative;
+  display: flex;
+  order: -1;
+  margin-right: 20px;
 }
 .search-label:before {
   content: "";
@@ -190,6 +193,9 @@ body {
   padding: 30px;
   border-radius: 10px;
 }
+.modal-button {
+  margin-left: auto;
+}
 .category:hover{
   opacity: 0.5;
 }
@@ -205,6 +211,31 @@ body {
 .category--amount {
   color: #818787;
   margin-top: 10px;
+}
+.category-dropdown {
+  display: flex;
+  flex-direction: column;
+}
+.dropdown {
+  display: inline-block;
+  border: 2px solid;
+  position: relative;
+  border-radius: 8px;
+  padding: 10px;
+}
+.menu {
+  display: block;
+  max-height: 400px;
+}
+.dropdown .dropdown-content {
+  overflow: auto;
+  height: auto;
+}
+.add-item-text{
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: 15px;
 }
 .items {
   height: calc(100% /2 - 48px - 30px);
@@ -296,6 +327,9 @@ body {
   padding-right: 42px;
   padding-bottom: 42px;
   width: 500px;
+}
+.table-select-container {
+  display: flex;
 }
 .table--number {
   font-size: 28px;
@@ -432,7 +466,8 @@ body {
  .orders--container {
   display: flex;
   justify-content: space-between;
-  padding: 42px;      
+  padding-top: 42px;
+  padding-bottom: 42px;      
   border-radius: 10px;
 }
 .orders--card {
@@ -547,6 +582,13 @@ body {
   background-color: gray;
 }
 
+.category-info {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 35px;
+}
+}
+
 
 @media only screen and (min-height: 768px) and (max-height: 1035px) {
   /* CSS styles for tablet landscape screens */
@@ -626,6 +668,7 @@ body {
     width: 145px;
     padding: 7px 37px;
     font-size: 16px;
+    margin-right: 407px;
   }
   .btn {
     font-size: 16px;
@@ -650,18 +693,34 @@ body {
     justify-content: flex-start;
     flex-wrap: wrap;
     gap: 20px;
-    height: 290px;
+    height: 315px;
     overflow: auto;
+  }
+  .item {
+    height: 163px;
+    padding: 16px;
+    width: calc(100%/4 - 17px);
   }
   .item-text {
     font-size: 16px;
   }
   .item--title {
-    font-size: 20px;
+    font-size: 16px;
+    margin-top: 10px;
+  }
+  .item--location {
+    margin: 0;
   }
   .quantity--add, .quantity--minus {
     height: 25px;
     width: 25px;
+  }
+  .dropdown {
+    display: inline-block;
+    border: 2px solid;
+    position: relative;
+    border-radius: 8px;
+    padding: 17px
   }
 
   /* Checkout */
@@ -698,6 +757,22 @@ body {
     padding: 15px 15px;
     margin-top: 12px;
   }
-  
+
+  /* /DASHBOARD */
+  .dashboard--container {
+    margin-left: 262px;
+    width: 100%;
+  }
+  /* /ORDERS */
+  .orders-container {
+    margin-left: 267px;
+    width: 100%;
+  }
+  .orders-header {
+    font-size: 16px;
+  }
+  .orders-info-card {
+    padding: 21px;
+  }
 
 }
